[package]
name = "littlefs2-sys"
description = "Low-level bindings to littlefs"
version = "0.1.6"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["embedded", "filesystem", "no-std"]
repository = "https://github.com/nickray/littlefs2-sys"

[dependencies]
cty = "0.2.1"
log = "0.4.20"
heapless = "0.7.16"


[build-dependencies]
bindgen = { version = "0.65.1", default-features = false, features = [
    "runtime",
] }
cc = "1"
which = "4.0"

[features]
default = ["no-log"]
assertions = []
# Since the transfer of littleFs logs to the log crate use a bunch of unsafe code, this allow to disable all littleFS C side loggings and there transfer
no-log = []
